# wallet-mask

./: .gitignore  PRIVACY_POLICY.md  README.md
crates/wasm-detector/: Cargo.toml
crates/wasm-detector/src/: lib.rs
extension/: content.js  manifest.json  popup.css  popup.html  popup.js
