[package]
name = "wasm-detector"
version = "0.1.0"
authors = ["iamprecieee"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
wasm-bindgen = "0.2.106"
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false